--- a/layouts/partials/introduction.html
+++ b/layouts/partials/introduction.html
@@ -1,1 +1,1 @@
-I am a software developer living in Chicago, IL currently working on the Venmo mobile app. Outside of work, I can be found reading, cooking or experiencing the world. I am currently passionate about mobility -- both in the personal health sense and how people can get around a place.
+I am a software developer living in Chicago, IL currently working on the Venmo mobile app. Outside of work, I can be found reading, cooking or outside, experiencing the world. I am currently passionate about mobility -- both in the personal health sense and how people get around.
